fix overflow

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -46,6 +46,7 @@
             font-weight: 600;
         }
         @media (max-width: 1368px){
+            width: 80%;
             h2{
                 font-size: 3rem;
             }
