--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body{
     background-color: #141D2F;
     color: #fff;
     font-family: Poppins, sans-serif;
-    overflow-x: hidden;
+    overflow-x: hidden!important;
 }
 button{
   width: 120px;
